kubernetes/flux/infrastructure/base/uptime-kuma/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  selector:
    name: uptime-kuma
  type: LoadBalancer
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
